k8s/feed-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed-service
  template:
    metadata:
      labels:
        app: feed-service
    spec:
      containers:
      - name: feed-service
        image: feed-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: feed-service
spec:
  type: ClusterIP
  selector:
    app: feed-service
  ports:
  - port: 8085
    targetPort: 8085
