k8s/post-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
      - name: post-service
        image: post-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  type: ClusterIP
  selector:
    app: post-service
  ports:
  - port: 8084
    targetPort: 8084
