k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8081
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8082
      - path: /follow
        pathType: Prefix
        backend:
          service:
            name: follow-service
            port:
              number: 8083
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: post-service
            port:
              number: 8084
      - path: /feed
        pathType: Prefix
        backend:
          service:
            name: feed-service
            port:
              number: 8085
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: feed-service
            port:
              number: 8085
